error.txt
    Checking novel-api v0.1.0 (C:\Users\tigfi\Desktop\novel-s\backend)
error[E0277]: the trait bound `fn(State<Arc<...>>, ...) -> ... {...::upload_content}: Handler<_, _>` is not satisfied
   --> src\routes.rs:133:40
    |
133 |         .route("/upload/content", post(UploadHandler::upload_content))
    |                                   ---- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Handler<_, _>` is not implemented for fn item `fn(State<Arc<AppStateInner>>, Multipart) -> ... {...::upload_content}`
    |                                   |
    |                                   required by a bound introduced by this call
    |
    = note: Consider using `#[axum::debug_handler]` to improve the error message
    = help: the following other types implement trait `Handler<T, S>`:
              `Layered<L, H, T, S>` implements `Handler<T, S>`
              `MethodRouter<S>` implements `Handler<(), S>`
note: required by a bound in `post`
   --> C:\Users\tigfi\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\axum-0.8.6\src\routing\method_routing.rs:445:1
    |
445 | top_level_handler_fn!(post, POST);
    | ^^^^^^^^^^^^^^^^^^^^^^----^^^^^^^
    | |                     |
    | |                     required by a bound in this function
    | required by this bound in `post`
    = note: the full name for the type has been written to 'C:\Users\tigfi\Desktop\novel-s\backend\target\debug\deps\novel_api-55d39c88f847bf2e.long-type-9341160467782164631.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = note: this error originates in the macro `top_level_handler_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `novel-api` (lib) due to 1 previous error
